Modified the z-index of the blob and about content to fix masked mix-blend-mode.

--- a/src/scss/components/_blob.scss
+++ b/src/scss/components/_blob.scss
@@ -5,7 +5,7 @@
     right: 0;
     max-width: 90vw;
     
-    z-index: -1;
+    z-index: 0;
   }
   
   &-img {
