--- a/src/scss/components/_masked.scss
+++ b/src/scss/components/_masked.scss
@@ -3,4 +3,6 @@
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   mix-blend-mode: multiply;
+  position: relative;
+  z-index: 1;
 }
